# SOTR-Project2

./: CMakeLists.txt  README.md  leds.c  leds.h  stbs.c  stbs.h  uart_comm.c  uart_comm.h
